feat: return workflow on creation
